[package]
name = "procsys"
version = "0.1.0"
edition = "2021"
authors = ["github.com/navidys/sysmetrics"]
license = "MIT"
readme = "README.md"
description = "Rust library to retrieve system, kernel, and process metrics from the pseudo-filesystems /proc and /sys"

[dependencies]
env_logger = "0.11.3"
getset = "0.1.2"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
walkdir = "2.5.0"
