[package]
name = "procsys"
version = "0.5.0"
edition = "2021"
authors = ["github.com/navidys/sysmetrics"]
license = "MIT"
readme = "README.md"
description = "Rust library to retrieve system, kernel, and process metrics from the pseudo-filesystems /proc and /sys"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
walkdir = "2.5.0"
